# storie

./: .gitignore  ARCHITECTURE_NEW.md  CMakeLists.txt  README.md  REFACTORING_SUMMARY.md  WINDOWS_IMPLEMENTATION.md  WINDOWS_README.md  backstorie.nim  build-audio-example-raylib.sh  build-audio-example-sdl.sh  build-example.sh  build-web-full.sh  build-web-sdl-full.sh  build-web-sdl.sh  build-web.sh  build-windows.bat  build-windows.sh  build.sh  canvas.lua  canvas.md  depths.md  events-keys.md  example-sinewave.md  index  index.html  index.md  index.nim  minus-issue.md  nim.cfg  niminitest.nim  quest.md  setup-sdl3-windows.sh  snow.lua  snow.md  storie  storie-sdlgpu  storie.js  storie.nim  story.md  styles.md  (+17 more)
docs/: LIBRARY.md  PLATFORM_ABSTRACTION_DESIGN.md  POSIX_SEPARATION.md  QUICKREF_POSIX_SEPARATION.md  RAYLIB_COMPAT.md  RAYLIB_SETUP.md  REFERENCE.md  WEB.md  WINDOWS_SUPPORT.md  backstorie.js  backstorie.wasm.js  backstorie.wasm.wasm  index.html  index.md  storie-raylib-full.js  storie-raylib-full.wasm  storie-raylib.js  storie-raylib.wasm  storie-sdl-full.js  storie-sdl-full.wasm  storie-sdl.js  storie-sdl.wasm  storie.js  storie.wasm
examples/: audio_example.nim  audio_nimini_example.nim  bounce.md  build-raylib-compat-demo.sh  build-raylib-demo.sh  events_advanced.nim  events_core.nim  full_imports.nim  minimal_imports.nim  nimini_comprehensive.nim  pure_nim.nim  pure_nimini.nim  raylib_compat_demo  raylib_compat_demo.nim  stars.md  windows_test.nim
lib/: animation.nim  events.nim  ui_components.nim
nimcache_wasm_raylib/: @mindex.nim.c  @mplatform@srender3d_interface.nim.c  @msrc@snimini@sruntime.nim.c  @mstorie.nim.c  @pstrutils.nim.c  @psystem.nim.c  @ptables.nim.c  storie-raylib.json
nimcache_wasm_raylib_full/: @mindex.nim.c  @mplatform@spixel_types.nim.c  @mplatform@splatform_interface.nim.c  @mplatform@sraylib@sraylib_platform.nim.c  @mplatform@sraylib@sraylib_render3d.nim.c  @mplatform@srender3d_interface.nim.c  @msrc@snimini@sast.nim.c  @msrc@snimini@sbackend.nim.c  @msrc@snimini@sbackends@snim_backend.nim.c  @msrc@snimini@sfrontend.nim.c  @msrc@snimini@sfrontends@snim_frontend.nim.c  @msrc@snimini@sparser.nim.c  @msrc@snimini@splugin.nim.c  @msrc@snimini@sruntime.nim.c  @msrc@snimini@stokenizer.nim.c  @mstorie.nim.c  @palgorithm.nim.c  @phashes.nim.c  @pmath.nim.c  @pparseutils.nim.c  @pstd@sassertions.nim.c  @pstd@sformatfloat.nim.c  @pstd@sprivate@sdigitsutils.nim.c  @pstd@sprivate@sdragonbox.nim.c  @pstrutils.nim.c  @psystem.nim.c  @psystem@sdollars.nim.c  @psystem@sexceptions.nim.c  @ptables.nim.c  @ptimes.nim.c  storie-raylib-full.json
nimcache_wasm_sdl/: @mindex.nim.c  @mplatform@spixel_types.nim.c  @mplatform@splatform_interface.nim.c  @mplatform@srender3d_interface.nim.c  @mplatform@ssdl@ssdl_platform.nim.c  @mplatform@ssdl@ssdl_render3d.nim.c  @msrc@snimini@sast.nim.c  @msrc@snimini@sbackend.nim.c  @msrc@snimini@sbackends@snim_backend.nim.c  @msrc@snimini@sfrontend.nim.c  @msrc@snimini@sfrontends@snim_frontend.nim.c  @msrc@snimini@sparser.nim.c  @msrc@snimini@splugin.nim.c  @msrc@snimini@sruntime.nim.c  @msrc@snimini@stokenizer.nim.c  @mstorie.nim.c  @palgorithm.nim.c  @phashes.nim.c  @pmath.nim.c  @pparseutils.nim.c  @pstd@sassertions.nim.c  @pstd@sformatfloat.nim.c  @pstd@sprivate@sdigitsutils.nim.c  @pstd@sprivate@sdragonbox.nim.c  @pstrutils.nim.c  @psystem.nim.c  @psystem@sdollars.nim.c  @psystem@sexceptions.nim.c  @ptables.nim.c  @ptimes.nim.c  storie-sdl.json
nimcache_wasm_sdl_full/: @mindex.nim.c  @mplatform@splatform_interface.nim.c  @mplatform@ssdl@ssdl_platform.nim.c  @msrc@snimini@sast.nim.c  @mstorie.nim.c  (+7 more)
(+27 files in other folders)
